# game.libretro.bsnes-mercury-accuracy

./: .travis.yml  CMakeLists.txt  README.md  appveyor.yml
.github/workflows/: sync-addon-metadata-translations.yml
debian/: control
depends/common/bsnes-mercury-accuracy/: CMakeLists.txt  bsnes-mercury-accuracy.txt
game.libretro.bsnes-mercury-accuracy/: addon.xml  addon.xml.in
game.libretro.bsnes-mercury-accuracy/resources/: buttonmap.xml  topology.xml
game.libretro.bsnes-mercury-accuracy/resources/language/English/: strings.po
game.libretro.bsnes-mercury-accuracy/resources/language/resource.language.af_za/: strings.po
game.libretro.bsnes-mercury-accuracy/resources/language/resource.language.am_et/: strings.po
game.libretro.bsnes-mercury-accuracy/resources/language/resource.language.ar_dz/: strings.po
game.libretro.bsnes-mercury-accuracy/resources/language/resource.language.ar_sa/: strings.po
game.libretro.bsnes-mercury-accuracy/resources/language/resource.language.ast_es/: strings.po
game.libretro.bsnes-mercury-accuracy/resources/language/resource.language.az_az/: strings.po
game.libretro.bsnes-mercury-accuracy/resources/language/resource.language.be_by/: strings.po
game.libretro.bsnes-mercury-accuracy/resources/language/resource.language.bg_bg/: strings.po
game.libretro.bsnes-mercury-accuracy/resources/language/resource.language.bs_ba/: strings.po
game.libretro.bsnes-mercury-accuracy/resources/language/resource.language.ca_es/: strings.po
game.libretro.bsnes-mercury-accuracy/resources/language/resource.language.cs_cz/: strings.po
(+80 files in other folders)
